--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "install": "^0.13.0",
     "npm": "^10.8.1",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.3",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11",
     "swiper": "^11.1.4"
