--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "aos": "^2.3.4",
+    "axios": "^1.7.2",
+    "formik": "^2.4.6",
     "install": "^0.13.0",
     "npm": "^10.8.1",
     "react": "^18.2.0",
@@ -26,7 +28,9 @@
     "react-router-dom": "^6.23.1",
     "save": "^2.9.0",
     "styled-components": "^6.1.11",
-    "swiper": "^11.1.4"
+    "sweetalert2": "^11.11.1",
+    "swiper": "^11.1.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
