--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
     "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.0",
     "save": "^2.9.0",
     "styled-components": "^6.1.11",
     "sweetalert2": "^11.11.1",
